--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
       }
     }
   </script>
+  <script src="app.js" type="module"></script>
+
 
 </head>
 <body class="min-h-screen bg-neutral-950 text-neutral-100">
@@ -928,6 +930,7 @@
   </script>
 </body>
 </html>
+
 
 
 
