--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
       }
     }
   </script>
-
+<!-- Cloudflare Web Analytics -->
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "adb803349cc244de91d7e4bcc6261efc"}'></script> 
+<!-- End Cloudflare Web Analytics -->
 
 </head>
 <body class="min-h-screen bg-neutral-950 text-neutral-100">
@@ -911,6 +913,7 @@
   </script>
 </body>
 </html>
+
 
 
 
