--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@
   <!-- Tailwind desde CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
-    tailwind.config = {
-      theme: { extend: { colors: { yakuza: '#9e8ced', 'yakuza-light': '#bfaeff' } } }
-    }
+    tailwind.config = { theme: { extend: { colors: { yakuza: '#9e8ced', 'yakuza-light': '#bfaeff' } } } }
   </script>
   <!-- Cloudflare Web Analytics -->
   <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "adb803349cc244de91d7e4bcc6261efc"}'></script>
@@ -730,7 +728,7 @@
       setIframeTo(LIVE_QUEUE[LIVE_INDEX]);
     });
 
-    // ===== Pintar estado botón Kick =====
+    // ===== Helpers de links/iconos =====
     function linkType(l){
       const t = (l.type || '').toLowerCase();
       if (t) return t;
@@ -893,16 +891,17 @@
         const items = await r.json();
     
         const html = (Array.isArray(items) ? items : []).map(v => `
-          <div class=\"rounded-2xl overflow-hidden bg-neutral-900 border border-neutral-800\">
-            <iframe class=\"w-full aspect-video\" loading=\"lazy\" src=\"https://www.youtube-nocookie.com/embed/${'${v.id}'}\"
-              title=\"${'${(v.title || 'Video').replace(/\"/g,'&quot;') }'}\" frameborder=\"0\"
-              width=\"1280\" height=\"720\"
-              allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\"
-              referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>
-            <div class=\"px-3 py-2 text-sm text-neutral-300\">
-              <div class=\"font-medium\">${'${v.title || ''}'} </div>
-              <div class=\"text-neutral-400\">${'${new Date(v.published).toLocaleString('es-UY',{dateStyle:'medium', timeStyle:'short'})}'} </div>
-              <div class=\"text-neutral-500\">${'${v._channelName || ''}'} </div>
+          <div class="rounded-2xl overflow-hidden bg-neutral-900 border border-neutral-800">
+            <iframe class="w-full aspect-video" loading="lazy"
+              src="https://www.youtube-nocookie.com/embed/${v.id}"
+              title="${(v.title || 'Video').replace(/"/g,'&quot;')}" frameborder="0"
+              width="1280" height="720"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="px-3 py-2 text-sm text-neutral-300">
+              <div class="font-medium">${v.title || ''}</div>
+              <div class="text-neutral-400">${new Date(v.published).toLocaleString('es-UY',{dateStyle:'medium', timeStyle:'short'})}</div>
+              <div class="text-neutral-500">${v._channelName || ''}</div>
             </div>
           </div>
         `).join('');
