--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <link rel="preconnect" href="https://i.ytimg.com">
   <link rel="preconnect" href="https://i.postimg.cc">
   <link rel="dns-prefetch" href="https://player.kick.com">
+  <link rel="preconnect" href="https://lh3.googleusercontent.com">
+
 
   <!-- Perf: precarga del fondo grande -->
   <link rel="preload" as="image" href="https://i.postimg.cc/KjMW2DQj/wpp.jpg">
@@ -76,6 +78,7 @@
     #yy-lightbox { background: rgba(0,0,0,.85); }
     #yy-lightbox .yy-wrap { max-width:min(96vw,1100px); }
     #yy-lightbox img { max-height:80vh; }
+    #yy-close { z-index: 10; pointer-events: auto; }
 
     /* Icon buttons */
     .yy-icon-btn{ display:inline-flex;align-items:center;justify-content:center; width:34px;height:34px;border-radius:.6rem; border:1px solid rgba(255,255,255,.08); background:rgba(255,255,255,.04); transition:transform .12s ease, background .12s ease, border-color .12s ease; }
@@ -266,7 +269,7 @@
         </button>
 
       <div class="rounded-2xl overflow-hidden bg-neutral-900 border border-neutral-800 p-2">
-        <img id="yy-img" src="" alt="" class="w-full h-auto object-contain rounded-xl" />
+        <img id="yy-img" src="" alt="" class="w-full h-auto object-contain rounded-xl" decoding="async" loading="eager" fetchpriority="high" />
         <div class="flex items-center justify-between gap-2 px-2 py-2 text-sm text-neutral-300">
           <div id="yy-caption" class="truncate"></div>
           <div class="flex items-center gap-2">
@@ -963,5 +966,6 @@
   </script>
 </body>
 </html>
+
 
 
