--- a/index.html
+++ b/index.html
@@ -26,8 +26,18 @@
     .fade-in { animation: fade .35s ease-in-out; }
     @keyframes fade { from {opacity:0} to {opacity:1} }
 
-    body::-webkit-scrollbar { display: none; } /* Chrome/Safari/Edge */
-    body { scrollbar-width: none; }           /* Firefox */
+    /* Chrome, Edge, Safari */
+    body::-webkit-scrollbar {
+      width: 0px;       /* sin ancho */
+      height: 0px;      /* sin alto en scroll horizontal */
+      display: none;    /* oculta el control */
+    }
+    
+    /* Firefox */
+    body {
+      scrollbar-width: none;   /* oculta el scroll */
+      -ms-overflow-style: none; /* IE/Edge Legacy */
+    }
 
     /* MultiKick en fullscreen */
     #view-multikick:fullscreen,
@@ -966,6 +976,7 @@
   </script>
 </body>
 </html>
+
 
 
 
