--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="dns-prefetch" href="https://player.kick.com">
 
   <!-- Perf: precarga del fondo grande -->
-  <link rel="preload" as="image" href="https://i.postimg.cc/KjMW2DQj/wpp.jpg">
+  <link rel="preload" as="image" href="https://i.postimg.cc/bNzYCyqR/bg.jpg">
 
   <style>
     .card:hover { transform: translateY(-2px); }
@@ -976,6 +976,7 @@
   </script>
 </body>
 </html>
+
 
 
 
