--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <body class="min-h-screen bg-neutral-950 text-neutral-100">
   <!-- Fondo -->
   <div class="fixed inset-0 -z-10">
-    <img src="https://i.postimg.cc/KjMW2DQj/wpp.jpg" alt="" class="w-full h-full object-cover" loading="eager" decoding="async" fetchpriority="low">
+    <img src="https://i.postimg.cc/bNzYCyqR/bg.jpg" alt="" class="w-full h-full object-cover" loading="eager" decoding="async" fetchpriority="low">
     <div class="absolute inset-0 bg-black/60"></div>
   </div>
 
@@ -976,6 +976,7 @@
   </script>
 </body>
 </html>
+
 
 
 
